test/JDBC/expected/babel_datetime.out
-- Test datetime default value
create table t1 (a datetime, b int)
go
insert into t1 (b) values (1)
go
~~ROW COUNT: 1~~

select a from t1 where b = 1
go
~~START~~
datetime
1900-01-01 00:00:00.0
~~END~~


-- Testing inserting into the table
create table datetime_testing ( dt DATETIME )
go
INSERT INTO datetime_testing VALUES('1753-1-1 00:00:00.000')
go
~~ROW COUNT: 1~~

INSERT INTO datetime_testing VALUES('9999-12-31 23:59:59.998')
go
~~ROW COUNT: 1~~

INSERT INTO datetime_testing VALUES('1992-05-23 23:40:29.999')
go
~~ROW COUNT: 1~~

INSERT INTO datetime_testing VALUES('1992-05-23 23:40:30.000')
go
~~ROW COUNT: 1~~

INSERT INTO datetime_testing VALUES('1999-12-31 23:59:59.998')
go
~~ROW COUNT: 1~~

INSERT INTO datetime_testing VALUES('1999-12-31 23:59:59.999')
go
~~ROW COUNT: 1~~

INSERT INTO datetime_testing VALUES('23:40:29.999')
go
~~ROW COUNT: 1~~

INSERT INTO datetime_testing VALUES('23:40:30.000')
go
~~ROW COUNT: 1~~

INSERT INTO datetime_testing VALUES('2020-03-14')
go
~~ROW COUNT: 1~~

select * from datetime_testing
go
~~START~~
datetime
1753-01-01 00:00:00.0
9999-12-31 23:59:59.997
1992-05-23 23:40:30.0
1992-05-23 23:40:30.0
1999-12-31 23:59:59.997
2000-01-01 00:00:00.0
1900-01-01 23:40:30.0
1900-01-01 23:40:30.0
2020-03-14 00:00:00.0
~~END~~


-- Test comparision with datetime/smalldatetime/date
select * from datetime_testing where dt >= smalldatetime('2000-01-01 00:00:59')
go
~~START~~
datetime
9999-12-31 23:59:59.997
2020-03-14 00:00:00.0
~~END~~

select * from datetime_testing where dt >= datetime('1992-05-23 23:40:00') 
                    and dt < datetime('1992-05-23 23:41:00')
go
~~START~~
datetime
1992-05-23 23:40:30.0
1992-05-23 23:40:30.0
~~END~~

select * from datetime_testing where dt < date('1992-05-24')
go
~~START~~
datetime
1753-01-01 00:00:00.0
1992-05-23 23:40:30.0
1992-05-23 23:40:30.0
1900-01-01 23:40:30.0
1900-01-01 23:40:30.0
~~END~~



-- Test rounding (datetime rounds milliseconds to 0.000, 0.003, 0.007)
-- TODO
-- Test type cast to/from other time formats
-- Test datetime2
select CAST(CAST('2020-03-15 23:59:29.99' AS datetime) AS datetime2)
go
~~START~~
datetime2
2020-03-15 23:59:29.990000
~~END~~

select CAST(CAST('2079-06-06 23:59:29.99' AS datetime2) AS datetime)
go
~~START~~
datetime
2079-06-06 23:59:29.99
~~END~~

select CAST(CAST('2079-06-06 23:59:29.992343' AS datetime2) AS datetime)
go
~~START~~
datetime
2079-06-06 23:59:29.993
~~END~~


-- Test date
select CAST(CAST('1999-12-31' AS date) AS datetime)
go
~~START~~
datetime
1999-12-31 00:00:00.0
~~END~~

select CAST(CAST('2000-01-01 23:59:59.999' AS datetime) AS date)
go
~~START~~
date
2000-01-01
~~END~~

-- out of range
select CAST(CAST('1752-12-31' AS date) AS datetime)
go
~~START~~
datetime
~~ERROR (Code: 517)~~

~~ERROR (Message: data out of range for datetime)~~


-- Test time
select CAST(CAST('00:00:00.000' AS time) AS datetime)
go
~~START~~
datetime
1900-01-01 00:00:00.0
~~END~~

select CAST(CAST('23:59:59.999' AS time) AS datetime)
go 
select CAST(CAST('23:59:59.123456' AS time) AS datetime)
go
~~START~~
datetime
1900-01-02 00:00:00.0
~~END~~

~~START~~
datetime
1900-01-01 23:59:59.123
~~END~~

select CAST(CAST('1900-05-06 23:59:29.998' AS datetime) AS time)
go
~~START~~
time
23:59:29.998000
~~END~~

select CAST(CAST('2050-05-06 00:00:00' AS datetime) AS time)
go
~~START~~
time
00:00:00.000000
~~END~~

select CAST(CAST('2050-05-06 23:59:29.998' AS datetime) AS time)
go
~~START~~
time
23:59:29.998000
~~END~~


-- Test smalldatetime
select CAST(CAST('2000-06-06 23:59:29.998' AS datetime) AS smalldatetime)
go
~~START~~
smalldatetime
2000-06-06 23:59:00.0
~~END~~

select CAST(CAST('2020-03-15 23:59:29.997' AS smalldatetime) AS datetime)
go
~~START~~
datetime
2020-03-15 23:59:00.0
~~END~~

select CAST(CAST('2020-03-15 23:59:29.999' AS smalldatetime) AS datetime)
go
~~START~~
datetime
2020-03-16 00:00:00.0
~~END~~

-- out of range
select CAST(CAST('3000-06-06 23:59:29.998' AS datetime) AS smalldatetime)
go
~~START~~
smalldatetime
~~ERROR (Code: 33557097)~~

~~ERROR (Message: data out of range for smalldatetime)~~


-- Test datetimeoffset
select CAST(CAST('2020-03-15 23:59:29.99' AS datetime) AS datetimeoffset)
go
~~START~~
datetimeoffset
2020-03-15 23:59:29.990000 +00:00
~~END~~

select CAST(CAST('2079-06-06 23:59:29.998 +8:00' AS datetimeoffset) AS datetime)
go
~~START~~
datetime
2079-06-06 15:59:29.997
~~END~~

select CAST(CAST('2079-06-06 23:59:29.998 -9:30' AS datetimeoffset) AS datetime)
go
~~START~~
datetime
2079-06-07 09:29:29.997
~~END~~

select CAST(CAST('2079-06-06 23:59:12.345678 -9:30' AS datetimeoffset) AS datetime)
go
~~START~~
datetime
2079-06-07 09:29:12.347
~~END~~

-- out of range
select CAST(CAST('0001-06-06 23:59:12.345678 -9:30' AS datetimeoffset) AS datetime)
go
~~ERROR (Code: 517)~~

~~ERROR (Message: data out of range for datetime)~~


-- Test datetime value ranges
select cast('1753-01-01' as datetime)
go
~~START~~
datetime
1753-01-01 00:00:00.0
~~END~~

select cast('9999-12-31' as datetime)
go
~~START~~
datetime
9999-12-31 00:00:00.0
~~END~~

select cast('1753-01-01 00:00:00' as datetime)
go
~~START~~
datetime
1753-01-01 00:00:00.0
~~END~~

select cast('9999-12-31 23:59:29.998' as datetime)
go
~~START~~
datetime
9999-12-31 23:59:29.997
~~END~~

-- out of range
select cast('1752-12-31' as datetime)
go
~~ERROR (Code: 517)~~

~~ERROR (Message: data out of range for datetime)~~

-- out of range
select cast('10000-00-00' as datetime)
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: date/time field value out of range: "10000-00-00")~~

select cast('9999-12-31 23:59:29.999' as datetime)
go
~~START~~
datetime
9999-12-31 23:59:30.0
~~END~~


-- out of range
select cast('1752-12-31 23:59:29.999' as datetime)
go 
-- out of range
select cast('2021-12-31 23:59:29.1234567' as datetime)
go 
-- Test datetime as parameter for time related functions
select day(cast('2002-05-23 23:41:29.998' as datetime))
go
~~ERROR (Code: 517)~~

~~ERROR (Message: data out of range for datetime)~~

~~ERROR (Code: 33557097)~~

~~ERROR (Message: data precision out of range for datetime)~~

select month(cast('2002-05-23 23:41:29.998' as datetime))
go
~~START~~
int
5
~~END~~

select year(cast('2002-05-23 23:41:29.998' as datetime))
go
~~START~~
int
2002
~~END~~

select datepart(quarter, cast('2002-05-23 23:41:29.998' as datetime))
go
~~START~~
int
2
~~END~~

select datepart(hour, cast('2002-05-23 23:41:29.998' as datetime))
go
~~START~~
int
23
~~END~~

select datepart(dayofyear, cast('2002-05-23 23:41:29.998' as datetime))
go
~~START~~
int
143
~~END~~

select datepart(second, cast('2002-05-23 23:41:29.998' as datetime))
go
~~START~~
int
29
~~END~~

select datename(year, cast('2002-05-23 23:41:29.998' as datetime))
go
~~START~~
text
2002
~~END~~

select datename(dw, cast('2002-05-23 23:41:29.998' as datetime))
go
~~START~~
text
Thursday
~~END~~

select datename(month, cast('2002-05-23 23:41:29.998' as datetime))
go
~~START~~
text
May
~~END~~

select dateadd(second, 56, cast('2016-12-26 23:29:29' as datetime))
go
~~START~~
datetime
2016-12-26 23:30:25.0
~~END~~

-- TODO Fix BABEL-2822
select dateadd(millisecond, 56, cast('2016-12-26 23:29:29' as datetime))
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: operator is not unique: integer * numeric)~~

select dateadd(minute, 56, cast('2016-12-26 23:29:29' as datetime))
go
~~START~~
datetime
2016-12-27 00:25:29.0
~~END~~

-- out of range
select dateadd(year, 150, cast('9900-12-26 23:29:29' as datetime))
go
~~ERROR (Code: 517)~~

~~ERROR (Message: data out of range for datetime)~~


-- Test data type precedence TODO Fix [BABEL-883] missing TDS support for type regtype (was pg_typeof produces error in sqlcmd)
select pg_typeof(c1) FROM (SELECT cast('2016-12-26 23:30:05' as datetime) as C1 UNION SELECT cast('2016-12-26 23:30:05' as smalldatetime) as C1) T
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: data type regtype is not supported yet)~~

select pg_typeof(c1) FROM (SELECT '2016-12-26 23:30:05'::datetime as C1 UNION SELECT '2016-12-26 23:30:05'::datetime2 as C1) T
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near ':' at line 1 and character position 55)~~

select pg_typeof(c1) FROM (SELECT '2016-12-26 23:30:05'::datetime as C1 UNION SELECT '2016-12-26 23:30:05 +08:00:00'::datetimeoffset as C1) T
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near ':' at line 1 and character position 55)~~

select pg_typeof(c1) FROM (SELECT '2016-12-26 23:30:05'::datetime as C1 UNION SELECT '23:30:05'::time as C1) T
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near ':' at line 1 and character position 55)~~

select pg_typeof(c1) FROM (SELECT '2016-12-26 23:30:05'::datetime as C1 UNION SELECT '2016-12-26'::date as C1) T
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near ':' at line 1 and character position 55)~~


-- Clean up
drop table datetime_testing
go
drop table t1
go
